<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/prof_name"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="31dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="13sp"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/city_input"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_marginRight="36dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/prof_name" />

    <EditText
        android:id="@+id/music_style_input"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="31dp"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/music_style"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_input" />

    <EditText
        android:id="@+id/passion_with_music"
        android:layout_width="345dp"
        android:layout_height="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:fontFamily="calibri"
        android:hint="@string/passion"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_style_input" /> <!-- Multiline input -->
        android:lines="8" <!-- Total Lines prior display -->
        android:minLines="6" <!-- Minimum lines -->
        android:gravity="top|left" <!-- Cursor Position -->
        android:maxLines="10" <!-- Maximum Lines -->
        android:layout_height="wrap_content" <!-- Height determined by content -->
        android:layout_width="fill_parent" <!-- Fill entire width -->
        android:scrollbars="vertical" <!-- Vertical Scroll Bar --><![CDATA[
    />

    ]]>

    <EditText
        android:id="@+id/description"
        android:layout_width="346dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:fontFamily="calibri"
        android:hint="@string/desc"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passion_with_music" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="City"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/city_input"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/city_input" />

    <TextView
        android:id="@+id/music_style_text"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:text="Music Style"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/music_style_input"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/music_style_input" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#0053f9"
        android:onClick="insertOrUpdate"
        android:text="SAVE"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="*Profile name, Work, City are featured when you connect with people\n*Music style is kind of how you follow channels"
        android:textSize="10dp"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_button" /> <!-- Multiline input -->
        android:lines="8" <!-- Total Lines prior display -->
        android:minLines="6" <!-- Minimum lines -->
        android:gravity="top|left" <!-- Cursor Position -->
        android:maxLines="10" <!-- Maximum Lines -->
        android:layout_height="wrap_content" <!-- Height determined by content -->
        android:layout_width="fill_parent" <!-- Fill entire width -->
        android:scrollbars="vertical" <!-- Vertical Scroll Bar -->
    />
</android.support.constraint.ConstraintLayout>

